https://github.com/TouK/airboat/issues/112 Added scrollbar to projectFiles in changesetDetails.

--- a/web-app/css/codereview.less
+++ b/web-app/css/codereview.less
@@ -160,6 +160,11 @@ a.manualLinkText:hover .linkText {
     text-decoration: underline;
 }
 
+.projectFiles {
+    max-height: 400px;
+    overflow-y: auto;
+
+}
 .changeset.row-fluid>.span7 {
     margin-left:  @fluidGridGutterWidth - 1%;
     width: (@fluidGridColumnWidth * 7) + (@fluidGridGutterWidth * (7 - 1)) + 1%;
